Fixed Frontend overflow formatting

--- a/frontend/src/app/home/home.scss
+++ b/frontend/src/app/home/home.scss
@@ -6,3 +6,7 @@
   flex: 1 1 0;
 }
 
+.right-column {
+  max-height: 600px;
+}
+
